--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.springframework.data</groupId>
-	<artifactId>spring-data-commons</artifactId>
-	<version>2.0.7.BUILD-SNAPSHOT</version>
+	<artifactId>spring-data-commons-chinatelecom</artifactId>
+	<version>2.0.7.RELEASE</version>
 
 	<name>Spring Data Core</name>
 
